--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.2",
     "phaser3-webfont-loader": "^1.0.0",
+    "prettier": "^2.4.1",
     "ts-loader": "^8.3.0",
     "typescript": "^4.4.4",
     "uuid": "^8.3.2",
