--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,5 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
   },
-
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"]
 }
